# project-web-ai

./: README.md
back/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  main.py  pyproject.toml
back/src/embeddings/: embed.py  loader.py
front/: .env.example  .gitignore  README.md  env.d.ts  package-lock.json  package.json  vite.config.ts
front/src/: App.vue  firebaseConfig.ts
front/src/assets/: main.css
front/src/components/chat/: ChatWindow.vue
front/src/components/layout/: AppSidebar.vue  ChatSidebar.vue  Sidebar.vue
front/src/router/: index.ts
front/src/services/: chatService.ts  mistralService.ts
front/src/stores/: chat.ts
front/src/views/: ChatView.vue  LoginView.vue  RegisterView.vue
