[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-mistralai>=1.1.1",
    "langchain-postgres>=0.0.16",
    "psycopg[binary]>=3.1.0",
    "pypdf>=5.1.0",
    "requests>=2.31.0",
]
